{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 91,
  "lineage": "594a49a4-e779-21ee-6aba-04b4fe612647",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_Amazon_Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05cafdf7c9f772ad2",
            "arn": "arn:aws:ec2:eu-central-1:254222607347:instance/i-090e8bfef4d33d358",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090e8bfef4d33d358",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0126cbf3cc4302751",
            "private_dns": "ip-10-0-1-136.eu-central-1.compute.internal",
            "private_ip": "10.0.1.136",
            "public_ip": "3.65.0.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0975bfe9a52741439",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063e9395da15b6131",
            "tags": {
              "Name": "My Amazon Linux Server"
            },
            "tags_all": {
              "Name": "My Amazon Linux Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cfd626afbef4bfa6"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.latest_amazon_linux",
            "module.sg.aws_security_group.SecurityGroup_EC2inPublicSubnet",
            "module.subnet.aws_subnet.publicsubnet",
            "module.subnet.data.aws_availability_zones.availableAZ",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup_EC2inPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:254222607347:security-group/sg-0cfd626afbef4bfa6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfd626afbef4bfa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for EC2 instances public subnets",
            "name_prefix": "",
            "owner_id": "254222607347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-publicsubnetEC2-SG"
            },
            "tags_all": {
              "Name": "dev-publicsubnetEC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfdf6c176ed4bc9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:254222607347:internet-gateway/igw-0648982ec8a83a4b4",
            "id": "igw-0648982ec8a83a4b4",
            "owner_id": "254222607347",
            "tags": {
              "Name": "dev-InternetGateway"
            },
            "tags_all": {
              "Name": "dev-InternetGateway"
            },
            "vpc_id": "vpc-0bfdf6c176ed4bc9c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:254222607347:route-table/rtb-062fe6f8f6966fd1b",
            "id": "rtb-062fe6f8f6966fd1b",
            "owner_id": "254222607347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0648982ec8a83a4b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-publicroutetable"
            },
            "tags_all": {
              "Name": "dev-publicroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfdf6c176ed4bc9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_internet_gateway.internetgateway",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeTableAssociationPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dae4584fe4fac84",
            "route_table_id": "rtb-062fe6f8f6966fd1b",
            "subnet_id": "subnet-063e9395da15b6131"
          },
          "dependencies": [
            "module.subnet.aws_internet_gateway.internetgateway",
            "module.subnet.aws_route_table.publicroutetable",
            "module.subnet.aws_subnet.publicsubnet",
            "module.subnet.data.aws_availability_zones.availableAZ",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:254222607347:subnet/subnet-063e9395da15b6131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063e9395da15b6131",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254222607347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-central-1a",
              "Environment": "dev-publicsubnet",
              "Name": "dev-publicsubnet-1"
            },
            "tags_all": {
              "AZ": "eu-central-1a",
              "Environment": "dev-publicsubnet",
              "Name": "dev-publicsubnet-1"
            },
            "vpc_id": "vpc-0bfdf6c176ed4bc9c"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.availableAZ",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:254222607347:vpc/vpc-0bfdf6c176ed4bc9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ca156ee548a72e4",
            "default_route_table_id": "rtb-0f9b852796ddcd0ed",
            "default_security_group_id": "sg-0b263e690d0488a9b",
            "dhcp_options_id": "dopt-5311a639",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bfdf6c176ed4bc9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9b852796ddcd0ed",
            "owner_id": "254222607347",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}